packet loss handle

--- a/socket/Makefile
+++ b/socket/Makefile
@@ -1,6 +1,6 @@
 all: server client
 server: server.cpp connection.hpp function.hpp structure.hpp 
-	g++ server.cpp -o server -std=c++11
+	g++ server.cpp -o server -std=c++11 -lpthread
 client: client.cpp connection.hpp function.hpp structure.hpp
 	g++ client.cpp -o client -std=c++11 -lpthread
 
